--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #54b911;
+    background-color: #595a56b2;
 }
 
 header {
