--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
     background-color: #000000;
-    color: #fff;
+    color: #9b7a7ad8;
     padding: 10px 0;
     text-align: center;
 }
