--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
     background-color: #000000;
-    color: #9b7a7ad8;
+    color: #ffffffd8;
     padding: 10px 0;
     text-align: center;
 }
@@ -17,7 +17,7 @@ header {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #998080;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
