--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
 
 footer {
     background-color: #333;
-    color: #fff;
+    color: #5a3e26;
     text-align: center;
     padding: 10px 0;
     position: fixed;
